--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,11 +2,266 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from surprise import SVD"
+    "from datetime import datetime\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "sns.set_style(\"whitegrid\")\n",
+    "import os\n",
+    "import random\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not os.path.isfile(\"./Data/NetflixRatings.csv\"): \n",
+    "#This line: \"os.path.isfile(\"../Data/NetflixRatings.csv\")\" simply checks that is there a file with the name \"NetflixRatings.csv\" in the \n",
+    "#in the folder \"/Data/\". If the file is present then it return true else false\n",
+    "    startTime = datetime.now()\n",
+    "    data = open(\"./Data/NetflixRatings.csv\", mode = \"w\") #this line simply creates the file with the name \"NetflixRatings.csv\" in \n",
+    "    #write mode in the folder \"Data\".\n",
+    "#     files = ['../Data/combined_data_1.txt','../Data/combined_data_2.txt', '../Data/combined_data_3.txt', '../Data/combined_data_4.txt']\n",
+    "    files = ['./Data/combined_data_2.txt', './Data/combined_data_4.txt']\n",
+    "    for file in files:\n",
+    "        print(\"Reading from file: \"+str(file)+\"...\")\n",
+    "        with open(file) as f:  #you can think of this command \"with open(file) as f\" as similar to 'if' statement or a sort of \n",
+    "            #loop statement. This command says that as long as this file is opened, perform the underneath operation.\n",
+    "            for line in f:\n",
+    "                line = line.strip() #line.strip() clears all the leading and trailing spaces from the string, as here each line\n",
+    "                #that we are reading from a file is a string.\n",
+    "                #Note first line consist of a movie id followed by a semi-colon, then second line contains custID,rating,date\n",
+    "                #then third line agains contains custID,rating,date which belong to that movie ID and so on. The format of data\n",
+    "                #is exactly same as shown above with the heading \"Example Data Point\". Check out above.\n",
+    "                if line.endswith(\":\"):\n",
+    "                    movieID = line.replace(\":\", \"\") #this will remove the trailing semi-colon and return us the leading movie ID.\n",
+    "                else:\n",
+    "                    #here, in the below code we have first created an empty list with the name \"row \"so that we can insert movie ID \n",
+    "                    #at the first position and rest customerID, rating and date in second position. After that we have separated all \n",
+    "                    #four namely movieID, custID, rating and date with comma and converted a single string by joining them with comma.\n",
+    "                    #then finally written them to our output \".csv\" file.\n",
+    "                    row = [] \n",
+    "                    row = [x for x in line.split(\",\")] #custID, rating and date are separated by comma\n",
+    "                    row.insert(0, movieID)\n",
+    "                    data.write(\",\".join(row))\n",
+    "                    data.write(\"\\n\")\n",
+    "        print(\"Reading of file: \"+str(file)+\" is completed\\n\")\n",
+    "    data.close()\n",
+    "    print(\"Total time taken for execution of this code = \"+str(datetime.now() - startTime))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not os.path.isfile(\"./Data/NetflixData.pkl\"):\n",
+    "    startTime = datetime.now()\n",
+    "    Final_Data = pd.read_csv(\"./Data/NetflixRatings.csv\", sep=\",\", names = [\"MovieID\",\"CustID\", \"Ratings\", \"Date\"])\n",
+    "    Final_Data[\"Date\"] = pd.to_datetime(Final_Data[\"Date\"])\n",
+    "    Final_Data.sort_values(by = \"Date\", inplace = True)\n",
+    "    print(\"Time taken for execution of above code = \"+str(datetime.now() - startTime))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not os.path.isfile(\"./Data/NetflixData.pkl\"):\n",
+    "    Final_Data.to_pickle(\"./Data/NetflixData.pkl\")\n",
+    "else:\n",
+    "    Final_Data = pd.read_pickle(\"./Data/NetflixData.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MovieID</th>\n",
+       "      <th>CustID</th>\n",
+       "      <th>Ratings</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>49557332</th>\n",
+       "      <td>17064</td>\n",
+       "      <td>510180</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1999-11-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46370047</th>\n",
+       "      <td>16465</td>\n",
+       "      <td>510180</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1999-11-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22463125</th>\n",
+       "      <td>8357</td>\n",
+       "      <td>510180</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1999-11-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35237815</th>\n",
+       "      <td>14660</td>\n",
+       "      <td>510180</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1999-11-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21262258</th>\n",
+       "      <td>8079</td>\n",
+       "      <td>510180</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1999-11-11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          MovieID  CustID  Ratings       Date\n",
+       "49557332    17064  510180        2 1999-11-11\n",
+       "46370047    16465  510180        3 1999-11-11\n",
+       "22463125     8357  510180        4 1999-11-11\n",
+       "35237815    14660  510180        2 1999-11-11\n",
+       "21262258     8079  510180        2 1999-11-11"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "Final_Data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    5.382511e+07\n",
+       "mean     3.606058e+00\n",
+       "std      1.082326e+00\n",
+       "min      1.000000e+00\n",
+       "25%      3.000000e+00\n",
+       "50%      4.000000e+00\n",
+       "75%      4.000000e+00\n",
+       "max      5.000000e+00\n",
+       "Name: Ratings, dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Final_Data.describe()[\"Ratings\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of NaN values = MovieID    0\n",
+      "CustID     0\n",
+      "Ratings    0\n",
+      "Date       0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of NaN values = \"+str(Final_Data.isnull().sum()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of duplicate rows = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "duplicates = Final_Data.duplicated([\"MovieID\",\"CustID\", \"Ratings\"])\n",
+    "print(\"Number of duplicate rows = \"+str(duplicates.sum()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Data:\n",
+      "Total number of movie ratings = 53825114\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Total Data:\")\n",
+    "print(\"Total number of movie ratings = \"+str(Final_Data.shape[0]))\n",
+    "print(\"Number of unique users = \"+str(len(np.unique(Final_Data[\"CustID\"]))))\n",
+    "print(\"Number of unique movies = \"+str(len(np.unique(Final_Data[\"MovieID\"]))))"
    ]
   },
   {
